--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
+spring.application.name = Startup
+
 spring.datasource.url= jdbc:sqlserver://localhost;databaseName=spring-boot-learning;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=sa
+# pool
+spring.datasource.max-active = 10 
 
+server.port = 1000
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
@@ -18,3 +23,8 @@ management.security.enabled=false
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=spring-boot
+
+
+# Eureka Client
+eureka.client.serviceUrl.defaultZone =  ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.client.instance.preferIpAddress = true
