--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,4 +32,4 @@ jobs:
       #Run Tests
       - name: Run Tests
         #run: mvn -B test
-        run: mvn -Dmaven.test.skip=false package
+        run: mvn -Dmaven.test.skip=true package
